--- a/assets/scss/objects/o-textarea.scss
+++ b/assets/scss/objects/o-textarea.scss
@@ -1,5 +1,5 @@
 // Textarea.
-.chj-textarea {
+.o-textarea {
   padding: em($ratio--s);
   border: $line--s solid;
   background-color: transparent;
