--- a/assets/scss/objects/o-submit.scss
+++ b/assets/scss/objects/o-submit.scss
@@ -1,13 +1,11 @@
-// Text input.
-.chj-input {
+.o-submit {
   height: em($height--b);
-  padding: 0 em($ratio--s);
+  padding: 0 em($ratio--b);
   border: $line--s solid;
   background-color: transparent;
+  // iOS fix.
+  border-radius: 0;
   @include state--focus {
     outline: 0;
   }
-  // iOS reset.
-  -webkit-appearance: none;
-  border-radius: 0;
 }
