--- a/assets/scss/base/b-typography.scss
+++ b/assets/scss/base/b-typography.scss
@@ -3,7 +3,7 @@ body {
   line-height: $default__leading;
 }
 ::selection {
-  background-color: $c-select--bg;
-  color: $c-select--text;
+  background-color: $c-select__background;
+  color: $c-select__text;
   text-shadow: none;
 }
