--- a/assets/scss/config/c-fonts.scss
+++ b/assets/scss/config/c-fonts.scss
@@ -1,6 +1,7 @@
 // Families.
 $font__sans: "Helvetica", sans-serif;
 $font__serif: "Georgia", serif;
+$font__mono: monospace;
 
 // Weights.
 $font__sans--regular: normal;
