--- a/assets/scss/config/c-bourbon.scss
+++ b/assets/scss/config/c-bourbon.scss
@@ -2,12 +2,11 @@
 $em-base: $unit--b;
 
 // Neat settings.
-$grid-columns: 12;
-$portrait-columns: 6;
-$phone-columns: 4;
+$columns__desktop: 12;
+$columns__landscape: 8;
+$columns__portrait: 6;
+$columns__phone: 4;
 
+$grid-columns: $columns__desktop;
 $column: em($ratio--l);
-$gutter: em($ratio--b);
-
-// Column span.
-$column--one: 4;
+$gutter: em($ratio--s);
