SCSS Added $spacing variable

--- a/assets/scss/config/c-fonts.scss
+++ b/assets/scss/config/c-fonts.scss
@@ -14,4 +14,4 @@ $font__serif--bold: bold;
 $default__size: $unit--b;
 $default__family: $font__sans;
 $default__weight: $font__sans--regular;
-$default__leading: 1.5;
+$default__leading: $spacing--b;
