SCSS Updated objects

--- a/assets/scss/objects/o-button-group.scss
+++ b/assets/scss/objects/o-button-group.scss
@@ -1,4 +1,15 @@
-// Inline buttons.
+// Button group.
+//
+// .o-button-group--inline - Inline buttons.
+// .o-button-group--stacked - Stacked buttons.
+//
+// Markup:
+// <div class="{$modifiers}">
+// <a href="#" class="o-button--solid">Button</a>
+// <a href="#" class="o-button--solid">Button</a>
+// </div>
+//
+// Styleguide 3.2.
 .o-button-group--inline {
   [class^="o-button--"],
   [class*=" o-button--"] {
