--- a/assets/scss/objects/o-button.scss
+++ b/assets/scss/objects/o-button.scss
@@ -1,19 +1,32 @@
 // A basic button.
+//
+// .o-button--solid - Solid background.
+// .o-button--outline - Outline variant.
+// .o-button--block - Full-width.
+// .o-button--selected - Selected.
+//
+// Markup:
+// <a href="#" class="o-button {$modifiers}">Button</a>
+// <a href="#" class="o-button {$modifiers} pseudo-class-hover">On Hover</a>
+//
+// Styleguide 3.1.
 [class^="o-button--"],
 [class*=" o-button--"] {
   display: inline-block;
-  text-decoration: none;
+
   padding-left: em($ratio--b);
   padding-right: em($ratio--b);
   line-height: em($height--b);
+  
+  border-radius: $radius--b;
+
+  text-decoration: none;
 }
 
-// Solid background.
 .o-button--solid {
   @include state--link {
     color: white;
-    background-color: $c-color1;
-    // background-color: hsb(50, 100, 95);
+    background-color: $c-link;
   }
   @include state--active {
     color: white;
@@ -39,4 +52,12 @@
   padding-left: 0;
   padding-right: 0;
   text-align: center;
+}
+
+// Selected.
+.o-button--selected {
+  @include state--all {
+    background-color: $c-grey1;
+    color: $c-grey4;
+  }
 }
