SCSS Reordered style.scs

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -52,12 +52,12 @@
 @import "objects/o-button-group";
 @import "objects/o-carousel";
 @import "objects/o-dotlist";
-@import "objects/o-input";
+@import "objects/o-field";
+@import "objects/o-form";
+@import "objects/o-hero";
 @import "objects/o-icon";
 @import "objects/o-icon-button";
-@import "objects/o-hero";
-@import "objects/o-holder";
-@import "objects/o-form";
+@import "objects/o-input";
 @import "objects/o-modal";
 @import "objects/o-nav";
 @import "objects/o-note";
