--- a/assets/scss/objects/o-slider.scss
+++ b/assets/scss/objects/o-slider.scss
@@ -2,8 +2,7 @@
   user-select: none;
 }
 .o-slider__list {
-  list-style: none;
-  padding-left: 0;
+  @include reset-list;
   &:hover {
     cursor: grab;
   }
