JADE Added o-hero--normal, o-hero__overlay--center

--- a/assets/jade/partials/_hero.jade
+++ b/assets/jade/partials/_hero.jade
@@ -1,7 +1,16 @@
 section(data-name="hero")
   h4.t-h4 Hero
-  .o-hero
+  .o-hero--normal
     .o-hero__overlay
+      .o-hero__content
+        h2.t-h2: +dummy(2, "words")
+        p: +dummy("10", "text")
+    .o-hero__background
+      img.o-hero__image(src="http://unsplash.it/640/360/?image=1", alt="unsplash.it")
+
+  h4.t-h4 Centered Hero
+  .o-hero--normal
+    .o-hero__overlay--center
       .o-hero__content
         h2.t-h2: +dummy(2, "words")
         p: +dummy("10", "text")
