--- a/assets/scss/objects/o-modal.scss
+++ b/assets/scss/objects/o-modal.scss
@@ -1,6 +1,6 @@
 .o-modal {
   display: none;
-  max-width: em($width--xxl);
+  max-width: em($width--xl);
   
   color: white;
   text-align: center;
