--- a/assets/scss/typography/t-emphasis.scss
+++ b/assets/scss/typography/t-emphasis.scss
@@ -1,6 +1,6 @@
 [class^="t-caps"],
 [class*=" t-caps"] {
-  letter-spacing: .125em;
+  letter-spacing: em($ratio--t);
   text-transform: uppercase;
   vertical-align: middle;
 }
