--- a/assets/scss/typography/t-headline.scss
+++ b/assets/scss/typography/t-headline.scss
@@ -9,17 +9,17 @@
 // Styleguide 0.2.
 .t-h1 {
   font-size: em($ratio--l);
-  line-height: 1.1;
+  line-height: $spacing--xxs;
   @include margin(em($ratio--s) null);
 }
 .t-h2 {
   font-size: em($ratio--m);
-  line-height: 1.2;
+  line-height: $spacing--xs;
   @include margin(em($ratio--b) null);
 }
 .t-h3 {
   font-size: em($unit--l);
-  line-height: 1.3;
+  line-height: $spacing--s;
 }
 .t-h4 {
   font-size: em($unit--m);
