--- a/assets/jade/templates/_basic.jade
+++ b/assets/jade/templates/_basic.jade
@@ -1,4 +1,5 @@
 block template-variables
+  - var pageSettings = {title: "chj", description: "Framework."}
 
 doctype
 html.no-js(lang="cs")
@@ -17,17 +18,15 @@ html.no-js(lang="cs")
       link(rel="stylesheet", href="assets/css/style.css")
       <!-- endbuild -->
 
-      <!-- build:remove -->
-      link(rel="stylesheet", href="assets/css/styleguide.css")
-      <!-- endbuild -->
-
   body
+    include ../mixins/_dummy
+
     block template-body
       p Basic template.
 
     block template-foot
       script(src="http://code.jquery.com/jquery-latest.min.js")
-      
+
       <!-- build:remove -->
       script window.jQuery || document.write("<script src='bower_components/jquery/dist/jquery.js'><\/script>")
       <!-- endbuild -->
@@ -43,4 +42,5 @@ html.no-js(lang="cs")
       script(src="assets/js/chj-nav.js")
       script(src="assets/js/chj-slider.js")
       script(src="assets/js/chj-tabs.js")
+      script(src="assets/js/chj-toggle.js")
       <!-- endbuild -->
