--- a/assets/jade/styleguide.jade
+++ b/assets/jade/styleguide.jade
@@ -8,6 +8,17 @@ append template-head
 block template-body
   - var colorCount = {main: 4, neutral: 8}
 
+  section.l-wrap
+    - var colors = 4
+    while colors > 0
+      .skupina(data-toggle="ahoj")
+        span skupina #{colors}
+        - var random = Math.floor((Math.random() * 4))
+        while random > 0
+          .barva barva #{random}
+          - random--
+      - colors--
+
   .l-wrap
     .sg-color
 
@@ -39,8 +50,8 @@ block template-body
                     .sg-color__overlay
                       span.sg-color__glyph--white Aa
               - n++
-      
-      .sg-color__group   
+
+      .sg-color__group
 
         - var n = 0
         while n < colorCount.main
@@ -58,3 +69,20 @@ block template-body
               span.sg-color__glyph--white Aa
               span.sg-color__glyph--black Aa
           - n++
+
+  section
+    - var n = 0
+    while n < colorCount.main
+      each shade in ["white", "light", "basic", "dark", "black"]
+        .sg-swatch--rectangle(class="sg-background-color#{n + 1}--#{shade}")
+      - n++
+
+    - var rect = 6
+    while rect > 0
+      .sg-swatch--rectangle
+      - rect--
+
+  .l-wrap
+    ul
+      each test in palette.neutral
+        li= test.name
