--- a/assets/scss/styleguide/sg-color.scss
+++ b/assets/scss/styleguide/sg-color.scss
@@ -1,71 +1,48 @@
-// Color swatch.
-//
-// Markup:
-// <div class="sg-color__swatch {$modifiers}"></div>
-//
-// Styleguide 2.3.
-.sg-color {
-  text-align: center;
-}
-.sg-color__group {
-  margin: em($ratio--l) 0;
-}
-// Swatches.
-[class^="sg-color__swatch"],
-[class*=" sg-color__swatch"] {
-  position: relative;
-  display: inline-block;
-  width: em($ratio--h);
-  height: em($ratio--h);
-  border-radius: 50%;
-  background-color: black;
-  margin: em($ratio--s);
-}
-.sg-color__swatch--small {
-  width: em($ratio--l);
-  height: em($ratio--l);
-  margin: em($ratio--xs);
-}
-// Fields.
-.sg-color__field {
-  position: relative;
-  text-align: center;
-  height: 40vh;
-}
-// Overlay.
-.sg-color__overlay {
-  @include stretch-overlay;
-  @include pseudo-center--parent;
-  font-size: em($ratio--l);
-}
-[class^="sg-color__glyph"],
-[class*=" sg-color__glyph"] {
-  & + & {
-    margin-left: 25vw;
-  }
-}
-.sg-color__glyph--white {
-  color: white;
-}
-.sg-color__glyph--black {
-  color: black;
-}
+$color-attributes: (
+  (
+    name: border,
+    property: border-color
+  ), (
+    name: background,
+    property: background-color
+  ), (
+    name: color,
+    property: color
+  )
+);
 
-$colors__main: $c-color1 $c-color2 $c-color3 $c-color4;
-$colors__grey: $c-grey1 $c-grey2 $c-grey3 $c-grey4 $c-grey5 $c-grey6 $c-grey7 $c-grey8;
+@each $attribute in $color-attributes {
 
-// Main background colors.
-@each $color in $colors__main {
-  $i: index($colors__main, $color);
-  .sg-background--main#{$i} {
-    background-color: $color;
-  }
-}
+  $attribute-name: map-get($attribute, "name");
+  $attribute-property: map-get($attribute, "property");
+  /* Attribute: #{$attribute-name} */
 
-// Neutral backgrounds.
-@each $color in $colors__grey {
-  $i: index($colors__grey, $color);
-  .sg-background--grey#{$i} {
-    background-color: $color;
+  $color-groups: map-get($json, "colors");
+
+  @each $color-name, $color-shades in $color-groups {
+    /* Color group: #{$color-name} */
+    $index: index($color-groups, $color-name); 
+    @each $color-shade in $color-shades {
+      $shade-name: map-get($color-shade, "name");
+      $shade-value: map-get($color-shade, "value");
+
+      .#{$attribute-name}-#{$index}--#{$shade-name} {
+        #{$attribute-property}: $shade-value;
+      }
+
+    }
   }
+
+  $greys: map-get($json, "greys");
+
+  /* Greys */
+  @each $grey in $greys {
+    $grey-name: map-get($grey, "name");
+    $grey-value: map-get($grey, "value");
+
+    .#{$attribute-name}-grey--#{$grey-name} {
+      #{$attribute-property}: $grey-value;
+    }
+  }
+
 }
