--- a/assets/jade/styleguide.jade
+++ b/assets/jade/styleguide.jade
@@ -8,16 +8,16 @@ append template-head
 block template-body
   - var colorCount = {main: 4, neutral: 8}
 
-  section.l-wrap
-    - var colors = 4
-    while colors > 0
-      .skupina(data-toggle="ahoj")
-        span skupina #{colors}
-        - var random = Math.floor((Math.random() * 4))
-        while random > 0
-          .barva barva #{random}
-          - random--
-      - colors--
+  //- section.l-wrap
+  //-   - var colors = 4
+  //-   while colors > 0
+  //-     .skupina(data-toggle="ahoj")
+  //-       span skupina #{colors}
+  //-       - var random = Math.floor((Math.random() * 4))
+  //-       while random > 0
+  //-         .barva barva #{random}
+  //-         - random--
+  //-     - colors--
 
   .l-wrap
     .sg-color
@@ -70,19 +70,27 @@ block template-body
               span.sg-color__glyph--black Aa
           - n++
 
+  //- section
+  //-   - var n = 0
+  //-   while n < colorCount.main
+  //-     each shade in ["white", "light", "basic", "dark", "black"]
+  //-       .sg-swatch--rectangle(class="sg-background-color#{n + 1}--#{shade}")
+  //-     - n++
+
+  //-   - var rect = 6
+  //-   while rect > 0
+  //-     .sg-swatch--rectangle
+  //-     - rect--
+
   section
-    - var n = 0
-    while n < colorCount.main
-      each shade in ["white", "light", "basic", "dark", "black"]
-        .sg-swatch--rectangle(class="sg-background-color#{n + 1}--#{shade}")
-      - n++
-
-    - var rect = 6
-    while rect > 0
-      .sg-swatch--rectangle
-      - rect--
-
-  .l-wrap
-    ul
-      each test in palette.neutral
-        li= test.name
+    h1 Colors
+    - var colorIndex = 0
+    each group in colors
+      - colorIndex++
+      .sg-group
+        each shade in group
+          .sg-swatch--rectangle(class="background-#{colorIndex}--#{shade.name}")= shade.value
+  section
+    h2 Greys
+    each grey in greys
+      .sg-grey= grey
