--- a/assets/scss/objects/o-form.scss
+++ b/assets/scss/objects/o-form.scss
@@ -2,7 +2,7 @@
   padding: em($ratio--b);
   margin: 0;
 
-  border: $line--s solid $c-grey2;
+  border: $line--s solid $grey-2;
   border-radius: $radius--b;
 }
 
