--- a/assets/scss/objects/o-input.scss
+++ b/assets/scss/objects/o-input.scss
@@ -5,21 +5,21 @@
 
   background-color: transparent;
 
-  border: $line--s solid $c-grey4;
+  border: $line--s solid $grey-4;
   border-radius: $radius--b;
   
   @include state--hover {
-    border-color: $c-grey6;
+    border-color: $grey-6;
   }
   @include state--focus {
-    border-color: $c-color1;
+    border-color: $color-1;
     outline: 0;
   }
   // iOS reset.
   -webkit-appearance: none;
   
   &:-webkit-autofill {
-    -webkit-box-shadow: 0 0 0 em($ratio--l) $c-grey1 inset;
-    border-color: $c-grey2;
+    -webkit-box-shadow: 0 0 0 em($ratio--l) $grey-1 inset;
+    border-color: $grey-2;
   }
 }
