--- a/assets/scss/objects/o-tabs.scss
+++ b/assets/scss/objects/o-tabs.scss
@@ -17,7 +17,7 @@
 .o-tabs__content {
   display: none;
   width: 100%;
-  border-top: $line--s solid $c-grey2;
+  border-top: $line--s solid $grey-2;
 }
 
 // Tab states.
