SCSS Added @if transparent to sg-color

--- a/assets/scss/styleguide/sg-color.scss
+++ b/assets/scss/styleguide/sg-color.scss
@@ -32,7 +32,11 @@ $color-attributes: (
       $shade-value: map-get($color-shade, "value");
 
       .#{$attribute-name}-#{$index}--#{$shade-name} {
-        #{$attribute-property}: $shade-value;
+        @if ($shade-value == "transparent") {
+          visibility: hidden;
+        } @else {
+          #{$attribute-property}: $shade-value;
+        }
       }
 
     }
